// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as column 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c0:hover {
  background-color: rgba(0,3,6,0.04);
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.glamor-2,
[data-glamor-2] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.glamor-0,
[data-glamor-0] {
  border-radius: 0;
  border-bottom-width: 0;
}

.glamor-0:first-of-type,
[data-glamor-0]:first-of-type {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.glamor-0:last-of-type,
[data-glamor-0]:last-of-type {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-width: 1px;
}

<div
  className="glamor-2"
>
  <button
    className="glamor-0 c0"
    disabled={false}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={0}
  >
    <span
      className="c1"
    >
      <span
        className="c2"
      >
        Button 1
      </span>
    </span>
  </button>
  <button
    className="glamor-0 c0"
    disabled={false}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={0}
  >
    <span
      className="c1"
    >
      <span
        className="c2"
      >
        Button 2
      </span>
    </span>
  </button>
</div>
`;

exports[`renders when disabled 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
  opacity: 0.5;
  pointer-events: none;
}

.c0:hover {
  background-color: rgba(0,3,6,0.04);
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.glamor-2,
[data-glamor-2] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
}

.glamor-0,
[data-glamor-0] {
  border-radius: 0;
  border-right-width: 0;
}

.glamor-0:first-of-type,
[data-glamor-0]:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.glamor-0:last-of-type,
[data-glamor-0]:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-right-width: 1px;
}

<div
  className="glamor-2"
>
  <button
    className="glamor-0 c0"
    disabled={true}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={-1}
  >
    <span
      className="c1"
    >
      <span
        className="c2"
      >
        Button 1
      </span>
    </span>
  </button>
  <button
    className="glamor-0 c0"
    disabled={true}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={-1}
  >
    <span
      className="c1"
    >
      <span
        className="c2"
      >
        Button 2
      </span>
    </span>
  </button>
</div>
`;

exports[`renders with disabled children 1`] = `
.c3 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c3:hover {
  background-color: rgba(0,3,6,0.04);
}

.c3:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
  opacity: 0.5;
  pointer-events: none;
}

.c0:hover {
  background-color: rgba(0,3,6,0.04);
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.glamor-2,
[data-glamor-2] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
}

.glamor-0,
[data-glamor-0] {
  border-radius: 0;
  border-right-width: 0;
}

.glamor-0:first-of-type,
[data-glamor-0]:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.glamor-0:last-of-type,
[data-glamor-0]:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-right-width: 1px;
}

<div
  className="glamor-2"
>
  <button
    className="glamor-0 c0"
    disabled={true}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={-1}
  >
    <span
      className="c1"
    >
      <span
        className="c2"
      >
        Button 1
      </span>
    </span>
  </button>
  <button
    className="glamor-0 c3"
    disabled={false}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={0}
  >
    <span
      className="c1"
    >
      <span
        className="c2"
      >
        Button 2
      </span>
    </span>
  </button>
</div>
`;

exports[`renders with non-button children 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c0:hover {
  background-color: rgba(0,3,6,0.04);
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.glamor-2,
[data-glamor-2] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
}

.glamor-0,
[data-glamor-0] {
  border-radius: 0;
  border-right-width: 0;
}

.glamor-0:first-of-type,
[data-glamor-0]:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.glamor-0:last-of-type,
[data-glamor-0]:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-right-width: 1px;
}

<div
  className="glamor-2"
>
  <button
    className="glamor-0 c0"
    disabled={false}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={0}
  >
    <span
      className="c1"
    >
      <span
        className="c2"
      >
        Button 1
      </span>
    </span>
  </button>
  <button
    className="glamor-0 c0"
    disabled={false}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={0}
  >
    <span
      className="c1"
    >
      <span
        className="c2"
      >
        Button 2
      </span>
    </span>
  </button>
  <span>
    Span
  </span>
</div>
`;

exports[`renders without crashing 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  color: rgba(0,3,6,0.87);
  background-color: transparent;
  border-color: rgba(0,3,6,0.12);
  padding: 8px 16px;
  font-size: 14px;
  line-height: 1.5;
}

.c0:hover {
  background-color: rgba(0,3,6,0.04);
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(0,3,6,0.12);
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c1 > :not(:first-child) {
  margin-left: 8px;
}

.c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.glamor-2,
[data-glamor-2] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
}

.glamor-0,
[data-glamor-0] {
  border-radius: 0;
  border-right-width: 0;
}

.glamor-0:first-of-type,
[data-glamor-0]:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.glamor-0:last-of-type,
[data-glamor-0]:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-right-width: 1px;
}

<div
  className="glamor-2"
>
  <button
    className="glamor-0 c0"
    disabled={false}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={0}
  >
    <span
      className="c1"
    >
      <span
        className="c2"
      >
        Button 1
      </span>
    </span>
  </button>
  <button
    className="glamor-0 c0"
    disabled={false}
    href=""
    onClick={[Function]}
    size="medium"
    tabIndex={0}
  >
    <span
      className="c1"
    >
      <span
        className="c2"
      >
        Button 2
      </span>
    </span>
  </button>
</div>
`;
